# python_workshop

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: python教習.md  環境構築.md  関数の設計方針について.md
docs/問題/: 1.py  2-1.py  2-2.py  2-3.py  3.py  4.py  5.py
docs/問題/解答/: 1.py  2-1.py  2-2.py  2-3.py  3.py  4.py  5.py  6.py
src/: main.py
tests/: test_main.py
