[tool.poetry]
name = "python_workshop"
version = "0.1.0"
description = "Python 3.12 + Poetry Dev Environment"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.8"
flake8 = "^7.0"
black = "^24.3"
isort = "^5.13"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
